syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";

option objc_class_prefix = "HLW";

message MessageGrpc {
    string id = 1;
    string text = 2;
}

message MessageResultGrpc{
    string id = 1;
    string hash = 2;
}


service Sender {
    rpc sendMessage(MessageGrpc) returns (MessageResultGrpc);
}

service Server {
    rpc print(MessageGrpc) returns (MessageResultGrpc);
}

service Receiver {
    rpc delivery(MessageGrpc) returns (MessageResultGrpc);
}
